Updated twitter icon to X

--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,8 @@
     />
     <link rel="manifest" href="./assets/favicon/site.webmanifest" />
 
+    <!-- font-awesome link-->    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- 
     - google font link
   -->
@@ -810,7 +812,7 @@
               <!-- Twitter Link with Icon -->
               <li>
                 <a href="#" class="label-2 footer-link hover-underline">
-                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-x-twitter"></i>
                   Twitter
                 </a>
               </li>
