--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
   <!--
       - Font Awesome
     -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-  <!--
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />  <!--
     - Ionic Icons CDN
   -->
   <script type="module" src="https://cdn.jsdelivr.net/npm/ionicons@6.0.0/dist/ionicons/ionicons.esm.js"></script>
@@ -885,7 +884,7 @@
           <!-- Twitter Link with Icon -->
           <li>
             <a href="#" class="label-2 footer-link hover-underline">
-              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-x-twitter"></i>
               Twitter
             </a>
           </li>
