Refactor contact page layout to use grid for better alignment

--- a/contact.html
+++ b/contact.html
@@ -275,14 +275,16 @@
           /*Contact Page*/
           .contact-container{
               height: 100vh;
-              display: flex;
+              display: grid;
               align-items: center;
               justify-content: space-evenly;
+              margin: 0 auto ;
+              box-sizing: border-box;
           }
           .contact-left{
               display: flex;
               flex-direction: column;
-              align-items: start;
+              align-items: center;
               gap: 20px;
           }
           .contact-left-title h2{
