Formatted all files + fixed bugs in css files where needed

--- a/blogpage6.html
+++ b/blogpage6.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us</title>
   <style>
     body {
-      background-color: #f9f9f9; /* Light background */
-      color: #333; /* Dark text color for readability */
+      background-color: #f9f9f9;
+      /* Light background */
+      color: #333;
+      /* Dark text color for readability */
       font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
@@ -20,7 +23,8 @@
       width: 90%;
       max-width: 400px;
       padding: 20px;
-      background-color: #fff; /* White background for the form */
+      background-color: #fff;
+      /* White background for the form */
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
@@ -28,15 +32,19 @@
     h2 {
       text-align: center;
       margin-bottom: 20px;
-      font-size: 28px; /* Larger text size */
-      color: #ffcc00; /* Yellow color for the header */
+      font-size: 28px;
+      /* Larger text size */
+      color: #ffcc00;
+      /* Yellow color for the header */
     }
 
     label {
       display: block;
       margin-bottom: 5px;
-      font-size: 16px; /* Slightly larger text size */
-      color: #555; /* Darker gray for labels */
+      font-size: 16px;
+      /* Slightly larger text size */
+      color: #555;
+      /* Darker gray for labels */
     }
 
     input[type="text"],
@@ -45,16 +53,20 @@
       width: 100%;
       padding: 10px;
       margin-bottom: 15px;
-      background-color: #f0f0f0; /* Light gray background for inputs */
-      color: #333; /* Dark text for inputs */
-      border: 1px solid #ccc; /* Light border */
+      background-color: #f0f0f0;
+      /* Light gray background for inputs */
+      color: #333;
+      /* Dark text for inputs */
+      border: 1px solid #ccc;
+      /* Light border */
       border-radius: 4px;
     }
 
     input[type="text"]:focus,
     input[type="email"]:focus,
     textarea:focus {
-      border-color: #ffcc00; /* Yellow border on focus */
+      border-color: #ffcc00;
+      /* Yellow border on focus */
       outline: none;
     }
 
@@ -66,25 +78,30 @@
     .submit-btn {
       width: 100%;
       padding: 10px;
-      background-color: #ffcc00; /* Yellow background for button */
-      color: #333; /* Dark text color for button */
+      background-color: #ffcc00;
+      /* Yellow background for button */
+      color: #333;
+      /* Dark text color for button */
       border: none;
       border-radius: 4px;
-      font-size: 18px; /* Larger text size for button */
+      font-size: 18px;
+      /* Larger text size for button */
       cursor: pointer;
       transition: background-color 0.3s;
     }
 
     .submit-btn:hover {
-      background-color: #e6b800; /* Darker yellow on hover */
+      background-color: #e6b800;
+      /* Darker yellow on hover */
     }
   </style>
 </head>
+
 <body>
 
   <div class="container">
     <h2>Contact Us</h2>
-    
+
     <form>
       <label for="name">Name</label>
       <input type="text" id="name" name="name" placeholder="Enter your name" required>
@@ -100,4 +117,5 @@
   </div>
 
 </body>
+
 </html>
