--- a/MeetOurTeam.html
+++ b/MeetOurTeam.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meet Our Team</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        .golden { color: rgb(247, 177, 14); }
-        .golden-bg { background-color: rgb(247, 177, 14); }
-        .golden-border { border: 4px solid rgb(247, 177, 14); }
+        .golden {
+            color: rgb(247, 177, 14);
+        }
+
+        .golden-bg {
+            background-color: rgb(247, 177, 14);
+        }
+
+        .golden-border {
+            border: 4px solid rgb(247, 177, 14);
+        }
+
         .glass-card {
             background: rgba(255, 255, 255, 0.2);
             backdrop-filter: blur(10px);
@@ -16,47 +26,61 @@
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
+
         .glass-card:hover {
             transform: translateY(-5px);
             box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
+
 <body class="bg-black text-gray-900">
     <header class="text-center py-24 bg-gradient-to-r from-gray-900 to-gray-700 text-white relative">
         <h1 class="text-6xl font-extrabold golden animate-pulse">Meet Our Team</h1>
-        <p class="text-xl mt-4 text-gray-300 max-w-4xl mx-auto">Get to know the brilliant minds behind 603 Interiors.</p>
+        <p class="text-xl mt-4 text-gray-300 max-w-4xl mx-auto">Get to know the brilliant minds behind 603 Interiors.
+        </p>
     </header>
-    
+
     <section class="max-w-6xl mx-auto px-6 py-16">
         <h2 class="text-4xl font-bold mb-10 text-center golden">Our Experts</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 ">
             <div class="bg-gray-800 p-8 rounded-lg shadow-lg text-center hover:scale-105 transition-transform">
-                <img src="./assets/images/founder.png" alt="Team Member" class="w-full h-60 object-cover rounded-lg mb-6 golden-border">
+                <img src="./assets/images/founder.png" alt="Team Member"
+                    class="w-full h-60 object-cover rounded-lg mb-6 golden-border">
                 <h3 class="text-2xl font-semibold golden">John Doe</h3>
                 <p class="text-gray-700 font-bold text-white">Founder & CEO</p>
-                <p class="text-gray-600 mt-4 text-white">Experience: 15+ years in workspace design and business leadership.</p>
-                <p class="text-gray-600  text-white">Previous Work: Led multiple successful office transformations worldwide.</p>
+                <p class="text-gray-600 mt-4 text-white">Experience: 15+ years in workspace design and business
+                    leadership.</p>
+                <p class="text-gray-600  text-white">Previous Work: Led multiple successful office transformations
+                    worldwide.</p>
             </div>
             <div class="bg-gray-800 p-8 rounded-lg shadow-lg text-center hover:scale-105 transition-transform">
-                <img src="./assets/images/designer.png" alt="Team Member" class="w-full h-60 object-cover rounded-lg mb-6 golden-border">
+                <img src="./assets/images/designer.png" alt="Team Member"
+                    class="w-full h-60 object-cover rounded-lg mb-6 golden-border">
                 <h3 class="text-2xl font-semibold golden">Jane Smith</h3>
                 <p class="text-gray-700 font-bold text-white">Head of Design</p>
-                <p class="text-gray-600 mt-4 text-white">Experience: 10+ years in interior design and architectural planning.</p>
-                <p class="text-gray-600 text-white">Previous Work: Designed award-winning commercial spaces and luxury interiors.</p>
+                <p class="text-gray-600 mt-4 text-white">Experience: 10+ years in interior design and architectural
+                    planning.</p>
+                <p class="text-gray-600 text-white">Previous Work: Designed award-winning commercial spaces and luxury
+                    interiors.</p>
             </div>
             <div class="bg-gray-800 p-8 rounded-lg shadow-lg text-center hover:scale-105 transition-transform">
-                <img src="./assets/images/manager.png" alt="Team Member" class="w-full h-60 object-cover rounded-lg mb-6 golden-border">
+                <img src="./assets/images/manager.png" alt="Team Member"
+                    class="w-full h-60 object-cover rounded-lg mb-6 golden-border">
                 <h3 class="text-2xl font-semibold golden">Michael Brown</h3>
                 <p class="text-gray-700 font-bold text-white">Project Manager</p>
                 <p class="text-gray-600 mt-4 text-white">Experience: 12+ years in project management and operations.</p>
-                <p class="text-gray-600 text-white">Previous Work: Successfully managed large-scale office renovation projects.</p>
+                <p class="text-gray-600 text-white">Previous Work: Successfully managed large-scale office renovation
+                    projects.</p>
             </div>
         </div>
     </section>
-    
+
     <footer class="text-center py-10 bg-gray-900 text-white">
-        <p class="text-lg text-gray-400">&copy; <script>document.write(new Date().getFullYear());</script> 603 Interiors. All rights reserved.</p>
+        <p class="text-lg text-gray-400">&copy;
+            <script>document.write(new Date().getFullYear());</script> 603 Interiors. All rights reserved.
+        </p>
     </footer>
 </body>
+
 </html>
