corrected spelling according to the context

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
               <h1 class="display-1 hero-title slider-reveal newHero">
                 Create Your Space <br>
-                that breathe creativity
+                that breathes creativity
               </h1>
 
               <p class="body-2 hero-text slider-reveal newHero">
