Added my contribution

--- a/about.html
+++ b/about.html
@@ -546,7 +546,7 @@
         line-height: 1.05em;
         margin: 1.5em;
         padding: 1em !important;
-        text-align: justify !important;
+        text-align: center !important;
       }
 
       .team-description b {
