--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
         .glass-box {
           background: rgba(0, 0, 0, 0.5);
           border-radius: 10px;
-          padding: 20px;
+          padding: 20px 50px;
           backdrop-filter: blur(9px);
           -webkit-backdrop-filter: blur(10px);
           box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -583,6 +583,7 @@
 
         .glass-box p {
           margin: 10px 0;
+          font-size: 26px !important;
         }
 
         .profile {
