--- a/blogpost4.html
+++ b/blogpost4.html
@@ -426,6 +426,8 @@
           min-height: 100%;
           box-sizing: content-box;
           border: 3px double #f7b10e;
+          border-radius: 10px;
+          overflow: hidden;
         }
 
         .space-description-heading {
@@ -434,7 +436,7 @@
           display: flex;
           justify-content: center;
           align-items: center;
-          padding: 2em;
+          padding: 2rem;
           font-weight: 900;
           color: hsl(38, 61%, 55%);
           text-shadow: 1px 0px 0px hsl(38, 61%, 50%),
@@ -453,6 +455,7 @@
           justify-content: center;
           align-items: center;
           height: 100%;
+          padding: 0 20px;
           background-image: linear-gradient(to top,
               rgb(54, 54, 54),
               rgba(54, 54, 54, 0.8),
@@ -594,7 +597,7 @@
           background-color: #2e3033;
           border-radius: 10px;
           padding: 20px;
-          max-width: 300px;
+          max-width: 350px;
           color: #f1f1f1;
           box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
           text-align: center;
@@ -608,18 +611,12 @@
           border: 2px solid #dba562;
         }
 
-        .card:hover .card-heading {
-          font-weight: bolder;
-          font-size: 22px;
-        }
-
         .divider {
           width: 100%;
           height: 30px;
           margin: 10px auto 20px;
           overflow: hidden;
         }
-
 
         .card-heading {
           font-size: 20px;
