--- a/indexLayout.html
+++ b/indexLayout.html
@@ -16,140 +16,172 @@
   <title>Image Hover Transition</title>
 
   <style>
-    body, html {
-      
-      height: 100%;
-      overflow-x: hidden; /* Prevent horizontal scroll */
-    }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
 
-    *{
-      margin: 0;
-      padding: 0;
-    }
-    h2 {
-      text-align: center;
-    }
-    .container {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      height: 100vh; /* Ensure the container takes the full height */
-    }
-    .image-container {
-      position: relative;
-      width: 25%;
-      height: 100vh; /* Full height of the screen */
-      overflow: hidden;
-      transition: width 0.5s ease, transform 0.5s ease;
-    }
-    .image-container img {
-      width: 100%;
-      height: 100%; /* Full height of the screen */
-      object-fit: cover;
-      transition: transform 0.5s ease;
-    }
-    .image-container:hover {
-      width: 100%;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-    .image-container:hover img {
-      transform: scale(1.05);
-    }
-    .image-container::after {
-      content: attr(data-text);
-      position: absolute;
-      bottom: 20px;
-      left: 20px;
-      color: white;
-      font-size: 24px;
-      background-color: rgba(0, 0, 0, 0.5);
-      padding: 5px 10px;
-      border-radius: 5px;
-    }
-    .button {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      padding: 10px 20px;
-      background-color: rgb(7, 138, 37);
-      color: white;
-      border: none;
-      cursor: pointer;
-      font-size: 16px;
-      border-radius: 5px;
-    }
+  html, body {
+    height: 100%;
+    background-color: #100c08;
+    font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
+  }
 
-    #nav{
-     background-color: gainsboro;
-    color: orangered;
+  #nav {
+    background-color: #1a1410;
+    color: #dba562;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     padding-left: 2vh;
     height: 10vh;
+    box-shadow: 0 2px 10px rgba(255, 204, 0, 0.2);
+  }
+
+  #nav h1 {
+    font-size: 1.8rem;
+    letter-spacing: 1px;
+  }
+
+  .container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 78vh;
+    gap: 1rem;
+    padding: 1rem;
+  }
+
+  .image-container {
+    position: relative;
+    width: 25%;
+    height: 80vh;
+    overflow: hidden;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: all 0.5s ease;
+    box-shadow: 0 0 10px rgba(255, 204, 0, 0.2);
+  }
+
+  .image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.6s ease;
+    filter: brightness(0.8);
+  }
+
+  .image-container:hover {
+    width: 60%;
+    box-shadow: 0 0 25px rgba(255, 204, 0, 0.6);
+    z-index: 10;
+  }
+
+  .image-container:hover img {
+    transform: scale(1.08);
+    filter: brightness(1);
+  }
+
+  .image-container::after {
+    content: attr(data-text);
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    color: #fabb6e;
+    font-size: 1rem;
+    background-color: rgba(16, 12, 8, 0.6);
+    padding: 8px 14px;
+    border-radius: 4px;
+    backdrop-filter: blur(4px);
+    letter-spacing: 1px;
+  }
+
+  .next-button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 3vh 0;
+  }
+
+  .next-button {
+    width: 12vw;
+    height: 6vh;
+    background-color: #dba562;
+    color: #100c08;
+    font-weight: bold;
+    border: none;
+    border-radius: 4px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+
+  .next-button:hover {
+    background-color: transparent;
+    border: 2px solid #dba562;
+    color: #dba562;
+    transform: scale(1.05);
+  }
+
+  .next-button a {
+    text-decoration: none;
+    color: inherit;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    line-height: 6vh;
+  }
+
+  @media (max-width: 1024px) {
+    .container {
+      flex-wrap: wrap;
+      height: auto;
+      gap: 2rem;
+      padding: 2rem 1rem;
     }
 
-    .next-button-container{
+    .image-container {
+      width: 45%;
+      height: 40vh;
+    }
+  }
 
-      display: flex;
-      justify-content: space-evenly;
+  @media (max-width: 768px) {
+    .container {
+      flex-direction: column;
       align-items: center;
-      margin-top: 5vh;
+      height: auto;
     }
 
-    .next-button{
-
-      width:10vw;
-      height:5vh;
-      margin-bottom: 5vh;
-      background-color: orangered;
-      border-radius: 100px;
+    .image-container {
+      width: 80%;
+      height: 200px;
     }
 
-    /* Media queries for mobile responsiveness */
-    @media only screen and (max-width: 1024px) {
-      .image-container {
-        width: 30%;
-        height: 80vh;
-      }
-      .image-container img {
-        height: 80vh;
-        object-fit: cover;
-      }
+    .next-button {
+      width: 50%;
+      height: 6vh;
     }
-    @media only screen and (max-width: 768px) {
-      .container {
-        flex-direction: column;
-        align-items: center;
-      }
-      .image-container {
-        width: 80%;
-        height: 200px;
-        margin-bottom: 20px;
-      }
-      .image-container img {
-        height: 200px;
-        object-fit: cover;
-      }
-      .button {
-        position: relative;
-        bottom: auto;
-        right: auto;
-        margin: 20px auto;
-      }
+  }
+
+  @media (max-width: 480px) {
+    #nav h1 {
+      font-size: 1.2rem;
     }
-    @media only screen and (max-width: 480px) {
-      .image-container {
-        width: 90%;
-        height: 150px;
-        margin-bottom: 15px;
-      }
-      .image-container img {
-        height: 150px;
-        object-fit: cover;
-      }
+
+    .image-container {
+      width: 90%;
+      height: 150px;
     }
-  </style>
+
+    .next-button {
+      width: 70%;
+    }
+  }
+</style>
+
 </head>
 <div id="nav"><h1>Select Your Layout</h1></div>
 <body>
@@ -186,7 +218,7 @@
     </div>
   </div>
 
-  <div class="next-button-container"> <button class="next-button"><a href="./BOQ/indexBOQ.html" style="text-decoration: none;color: white;">Next</a></button></div> 
+  <div class="next-button-container"> <button class="next-button"><a href="./BOQ/indexBOQ.html" style="text-decoration: none;">Next</a></button></div> 
 
 </body>
 </html>
