Improved the ui blogs page with scroll animation
Improved the ui of the blogs page with added scroll animation

--- a/blogs.html
+++ b/blogs.html
@@ -68,7 +68,10 @@
     href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Forum&display=swap"
     rel="stylesheet"
   />
-  <body id="top">
+  <body id="top" class="blogs-page">
+    <!-- Scroll Progress Bar -->
+    <div class="scroll-watcher"></div>
+    
     <!-- 
     - #PRELOADER
   -->
@@ -165,7 +168,7 @@
             <li class="navbar-item">
               <a
                 href="index.html#home"
-                class="navbar-link hover-underline active"
+                class="navbar-link hover-underline"
               >
                 <div class="separator"></div>
 
@@ -195,7 +198,7 @@
             </li>
 
             <li class="navbar-item">
-              <a href="blogs.html" class="navbar-link hover-underline">
+              <a href="blogs.html" class="navbar-link hover-underline active">
                 <div class="separator"></div>
                 <span class="span">Blogs</span>
               </a>
@@ -255,6 +258,17 @@
       </div>
     </header>
 
+    <!-- Floating Elements -->
+    <div class="floating-element">
+      <img src="./assets/images/separator.svg" alt="" width="50" height="50">
+    </div>
+    <div class="floating-element">
+      <img src="./assets/images/img-pattern.svg" alt="" width="60" height="60">
+    </div>
+    <div class="floating-element">
+      <img src="./assets/images/badge-2.png" alt="" width="40" height="40">
+    </div>
+
     <main>
       <article>
         <section
@@ -262,10 +276,9 @@
           aria-label="service"
         >
           <div class="container">
-            <div class="bg-dark p-5 m-3"></div>
-            <p class="section-subtitle label-2 mt-[10rem]"></p>
+            <p class="section-subtitle label-2">Latest Insights</p>
 
-            <h2 class="headline-1 section-title">Blogs</h2>
+            <h2 class="headline-1 section-title fade-in">Blogs</h2>
 
             <p class="section-text">
               Stay updated with our latest blog posts where we share insights,
@@ -275,7 +288,7 @@
             </p>
 
             <ul class="grid-list">
-              <li>
+              <li class="fade-in">
                 <div class="service-card">
                   <a href="#" class="has-before hover:shine">
                     <figure
@@ -287,7 +300,7 @@
                         width="285"
                         height="336"
                         loading="lazy"
-                        alt="Breakfast"
+                        alt="10 Years of 603"
                         class="img-cover"
                       />
                     </figure>
@@ -295,7 +308,7 @@
 
                   <div class="card-content">
                     <h3 class="title-4 card-title">
-                      <a href="blogpost1.html">10 Years of 603:How We Are</a>
+                      <a href="blogpost1.html">10 Years of 603: How We Are</a>
                     </h3>
 
                     <a href="HowWeAre.html" class="btn-text hover-underline label-2"
@@ -305,7 +318,7 @@
                 </div>
               </li>
 
-              <li>
+              <li class="fade-in">
                 <div class="service-card">
                   <a href="#" class="has-before hover:shine">
                     <figure
@@ -317,7 +330,7 @@
                         width="285"
                         height="336"
                         loading="lazy"
-                        alt="Appetizers"
+                        alt="Meet Our Team"
                         class="img-cover"
                       />
                     </figure>
@@ -335,7 +348,7 @@
                 </div>
               </li>
 
-              <li>
+              <li class="fade-in">
                 <div class="service-card">
                   <a
                     href="assets/blogpages/blogpost3.html"
@@ -350,7 +363,7 @@
                         width="285"
                         height="336"
                         loading="lazy"
-                        alt="Drinks"
+                        alt="Our Achievements"
                         class="img-cover"
                       />
                     </figure>
@@ -376,6 +389,270 @@
       -->
 
         <style>
+          /* Enhanced Blogs Page Styling */
+          .blogs-page {
+            background: linear-gradient(135deg, #0c0c0c 0%, #1a1a1a 50%, #0f0f0f 100%);
+            min-height: 100vh;
+            position: relative;
+            overflow-x: hidden;
+          }
+
+          /* Scroll Progress Bar */
+          .scroll-watcher {
+            height: 10px;
+            position: fixed;
+            top: 0;
+            z-index: 1000;
+            width: 100%;
+            border-radius: 1rem;
+            scale: 0 1;
+            animation: scroll-watcher ease-in;
+            background-color: var(--gold-crayola-dark);
+            animation-timeline: scroll();
+          }
+
+          @keyframes scroll-watcher {
+            to {
+              scale: 1 1;
+            }
+          }
+
+          /* Floating Elements */
+          .floating-element {
+            position: absolute;
+            z-index: 1;
+            opacity: 0.1;
+            animation: float 6s ease-in-out infinite;
+          }
+
+          .floating-element:nth-child(1) {
+            top: 10%;
+            left: 10%;
+            animation-delay: 0s;
+          }
+
+          .floating-element:nth-child(2) {
+            top: 20%;
+            right: 15%;
+            animation-delay: 2s;
+          }
+
+          .floating-element:nth-child(3) {
+            bottom: 30%;
+            left: 5%;
+            animation-delay: 4s;
+          }
+
+          @keyframes float {
+            0%, 100% { transform: translateY(0px) rotate(0deg); }
+            50% { transform: translateY(-20px) rotate(180deg); }
+          }
+
+          /* Enhanced Blog Section */
+          .section.service {
+            background: transparent !important;
+            padding: 16rem 0 6rem;
+            position: relative;
+            z-index: 2;
+            opacity: 1;
+            visibility: visible;
+            min-height: 80vh;
+          }
+
+          .section.service .container {
+            position: relative;
+            z-index: 3;
+            opacity: 1;
+            visibility: visible;
+          }
+
+          /* Enhanced Section Title */
+          .section-title {
+            background: linear-gradient(135deg, var(--gold-crayola), #ffd700, var(--gold-crayola));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            animation: titleGlow 3s ease-in-out infinite alternate;
+          }
+
+          @keyframes titleGlow {
+            from { filter: drop-shadow(0 0 10px rgba(255, 204, 0, 0.3)); }
+            to { filter: drop-shadow(0 0 20px rgba(255, 204, 0, 0.6)); }
+          }
+
+          /* Enhanced Section Subtitle */
+          .section-subtitle {
+            color: var(--gold-crayola);
+            font-size: 1.8rem;
+            font-weight: var(--weight-bold);
+            text-transform: uppercase;
+            letter-spacing: var(--letterSpacing-2);
+            margin-bottom: 20px;
+            position: relative;
+          }
+
+          .section-subtitle::after {
+            content: url('./assets/images/separator.svg');
+            display: block;
+            width: 100px;
+            margin: 15px auto 0;
+            filter: brightness(0) saturate(100%) invert(77%) sepia(85%) saturate(1256%) hue-rotate(1deg) brightness(102%) contrast(101%);
+          }
+
+          /* Enhanced Section Text */
+          .section-text {
+            color: var(--quick-silver);
+            font-size: var(--fontSize-body-2);
+            max-width: 800px;
+            margin: 0 auto 4rem;
+            line-height: var(--lineHeight-5);
+            text-align: center;
+            opacity: 1;
+            visibility: visible;
+          }
+
+          /* Debug: Ensure all elements are visible */
+          .section-subtitle,
+          .section-title,
+          .section-text,
+          .grid-list li {
+            opacity: 1 !important;
+            visibility: visible !important;
+          }
+
+          /* Enhanced Blog Cards */
+          .service-card {
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 20px;
+            overflow: hidden;
+            transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+            position: relative;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            opacity: 1;
+            visibility: visible;
+            min-height: 400px;
+          }
+
+          .service-card:hover {
+            transform: translateY(-10px) scale(1.02);
+            box-shadow: 0 20px 40px rgba(255, 204, 0, 0.2);
+            border-color: var(--gold-crayola);
+          }
+
+          .service-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.1), transparent);
+            transition: left 0.6s;
+            z-index: 1;
+          }
+
+          .service-card:hover::before {
+            left: 100%;
+          }
+
+          /* Enhanced Card Banner */
+          .card-banner {
+            position: relative;
+            overflow: hidden;
+            border-radius: 20px 20px 0 0;
+          }
+
+          .card-banner::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(45deg, rgba(255, 204, 0, 0.1), transparent);
+            opacity: 0;
+            transition: opacity 0.3s ease;
+          }
+
+          .service-card:hover .card-banner::after {
+            opacity: 1;
+          }
+
+          .img-cover {
+            transition: transform 0.4s ease;
+          }
+
+          .service-card:hover .img-cover {
+            transform: scale(1.1);
+          }
+
+          /* Enhanced Card Content */
+          .card-content {
+            padding: 2rem;
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            position: relative;
+            z-index: 2;
+          }
+
+          .card-title {
+            margin-bottom: 1.5rem;
+            flex-grow: 1;
+          }
+
+          .card-title a {
+            color: var(--white);
+            text-decoration: none;
+            transition: color 0.3s ease;
+            font-size: 1.4rem;
+            font-weight: var(--weight-bold);
+            line-height: 1.3;
+          }
+
+          .card-title a:hover {
+            color: var(--gold-crayola);
+          }
+
+          /* Enhanced Read More Button */
+          .btn-text {
+            color: var(--gold-crayola);
+            font-weight: var(--weight-bold);
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            position: relative;
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+            transition: all 0.3s ease;
+          }
+
+          .btn-text:hover {
+            color: var(--white);
+            transform: translateX(5px);
+          }
+
+          .btn-text::after {
+            content: '→';
+            transition: transform 0.3s ease;
+          }
+
+          .btn-text:hover::after {
+            transform: translateX(3px);
+          }
+
+          /* Enhanced Grid List */
+          .grid-list {
+            gap: 3rem;
+          }
+
+          /* Glass Box Styling */
           .glass-box {
             background: rgba(0, 0, 0, 0.5);
             border-radius: 10px;
@@ -387,17 +664,61 @@
             display: inline-block;
             margin: 0 auto;
           }
+
           .glass-box p {
             margin: 10px 0;
           }
+
           .profile {
             margin-top: 20px;
             text-align: center;
           }
+
           .profile .img {
             border-radius: 50%;
             border: 2px solid rgba(255, 255, 255, 0.3);
             padding: 5px;
+          }
+
+          /* Scroll Animations */
+          .fade-in {
+            opacity: 1;
+            transform: translateY(0);
+            transition: all 0.6s ease-out;
+          }
+
+          .fade-in.visible {
+            opacity: 1;
+            transform: translateY(0);
+          }
+
+          /* Ensure grid-list is visible */
+          .grid-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 3rem;
+            margin-top: 4rem;
+            opacity: 1;
+            visibility: visible;
+          }
+
+          /* Mobile Responsiveness */
+          @media (max-width: 768px) {
+            .section.service {
+              padding: 6rem 0 4rem;
+            }
+
+            .section-title {
+              font-size: 2.5rem;
+            }
+
+            .service-card {
+              margin-bottom: 2rem;
+            }
+
+            .grid-list {
+              gap: 2rem;
+            }
           }
         </style>
 
@@ -573,6 +894,72 @@
     - custom js link
   -->
     <script src="./assets/js/script.js"></script>
+
+    <!-- Enhanced JavaScript for Blogs Page -->
+    <script>
+      // Scroll animations
+      const observerOptions = {
+        threshold: 0.1,
+        rootMargin: '0px 0px -50px 0px'
+      };
+
+      const observer = new IntersectionObserver(function(entries) {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('visible');
+          }
+        });
+      }, observerOptions);
+
+      // Observe fade-in elements
+      document.querySelectorAll('.fade-in').forEach(element => {
+        observer.observe(element);
+      });
+
+      // Navbar functionality
+      const navbar = document.querySelector('[data-navbar]');
+      const navTogglers = document.querySelectorAll('[data-nav-toggler]');
+
+      const addEventOnElements = function (elements, eventType, callback) {
+        for (let i = 0, len = elements.length; i < len; i++) {
+          elements[i].addEventListener(eventType, callback);
+        }
+      }
+
+      const toggleNavbar = function () {
+        navbar.classList.toggle('active');
+        document.body.classList.toggle('nav-active');
+      }
+
+      addEventOnElements(navTogglers, 'click', toggleNavbar);
+
+      // Header scroll behavior
+      const header = document.querySelector('[data-header]');
+      let lastScrollPos = 0;
+
+      const hideHeader = function () {
+        const isScrollBottom = lastScrollPos < window.scrollY;
+        if (isScrollBottom) {
+          header.classList.add('hide');
+        } else {
+          header.classList.remove('hide');
+        }
+        lastScrollPos = window.scrollY;
+      }
+
+      window.addEventListener('scrollend', hideHeader);
+
+      // Enhanced card hover effects
+      document.querySelectorAll('.service-card').forEach(card => {
+        card.addEventListener('mouseenter', function() {
+          this.style.transform = 'translateY(-10px) scale(1.02)';
+        });
+        
+        card.addEventListener('mouseleave', function() {
+          this.style.transform = 'translateY(0) scale(1)';
+        });
+      });
+    </script>
 
     <!-- 
     - ionicon link
